--- a/static/chat.css
+++ b/static/chat.css
@@ -545,3 +545,12 @@ button.accept:active {
   background-color: #2d639b;
   transform: scale(0.98);
 }
+.unread-dot {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background: red;
+  border-radius: 50%;
+  margin-left: 6px;
+  vertical-align: middle;
+}
